# MidiViewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: resource.h  resource.rc
src/: App.cpp  App.h  AppMessages.h  MainFrame.cpp  MainFrame.h  MidiDocument.h  MidiParser.cpp  MidiParser.h  NoteListPanel.cpp  NoteListPanel.h  ScoreView.cpp  ScoreView.h  SizerBar.cpp  SizerBar.h  pch.h
